Finish index and house insurance

--- a/insurance/index.html
+++ b/insurance/index.html
@@ -33,7 +33,7 @@
 
             <div id="contact-popup-close"><i class="fa fa-times"></i></div>
 
-            <div id="google-map" data-lat="37.42565" data-lng="-122.13535" data-zoom-level="12">
+            <div id="google-map" data-lat="38.645543" data-lng="0.045522" data-zoom-level="12">
             </div>
 
             <div class="padding">
@@ -41,7 +41,7 @@
                 <i class="fa fa-envelope-o background-icon"></i>
 
                 <h3>Contact us</h3>
-                <h3 class="right">(+123) 456 789 000</h3>
+                <h3 class="right">(+34) 966 172 576</h3>
 
                 <h2>Send us an <span>email!</span></h2>
                 <form method="post" class="form">
@@ -86,9 +86,9 @@
 
             <ul id="quote-popup-tabs">
 
-                <li data-quote-tab-for="travel-insurance">Travel insurance</li>
+                <li data-quote-tab-for="travel-insurance">Healthcare Insurance</li>
                 <li data-quote-tab-for="car-insurance">Car insurance</li>
-                <li data-quote-tab-for="life-insurance">Life insurance</li>
+                <li data-quote-tab-for="life-insurance">Funeral Insurance</li>
                 <li data-quote-tab-for="house-insurance">House insurance</li>
 
             </ul>
@@ -96,7 +96,7 @@
             <div class="quote-forms">
 
                 <!--
-                travel insurance
+                Healthcare Insurance
                 -->
                 <div class="quote-form" data-quote-form-for="travel-insurance">
 
@@ -107,7 +107,7 @@
 
                     <div class="quote-form-content">
 
-                        <h2>Travel Insurance <span>Quote</span></h2>
+                        <h2>Healthcare Insurance <span>Quote</span></h2>
                         <div class="form">
 
                             <h4>Level of protection: <span class="slider-value quote-form-element" data-name="Level of protection" data-slider-id="travel-protection-level">$<span></span></span></h4>
@@ -389,7 +389,7 @@
                 </div>
 
                 <!--
-                life insurance
+                Funeral Insurance
                 -->
                 <div class="quote-form" data-quote-form-for="life-insurance">
 
@@ -400,7 +400,7 @@
 
                     <div class="quote-form-content">
 
-                        <h2>Life Insurance <span>Quote</span></h2>
+                        <h2>Funeral Insurance <span>Quote</span></h2>
                         <div class="form">
 
                             <h4>Level of protection: <span class="slider-value quote-form-element" data-name="Level of protection" data-slider-id="life-protection-level">$<span></span></span></h4>
@@ -732,17 +732,17 @@
 
                         <ul class="submenu animated speed fadeInDown">
 
-                            <li><a href="/agents.html">Agents</a></li>
+                            <!-- <li><a href="/agents.html">Agents</a></li> -->
 
                             <li>
 
                                 <a href="/get-a-travel-insurance-quote.html"><i class="fa fa-caret-left"></i> Quote forms</a>
                                 <ul class="submenu animated speed fadeInRight">
 
-                                    <li><a href="/get-a-life-insurance-quote.html">Life insurance Quote</a></li>
+                                    <li><a href="/get-a-life-insurance-quote.html">Funeral Insurance Quote</a></li>
                                     <li><a href="/get-a-car-insurance-quote.html">Car insurance Quote</a></li>
                                     <li><a href="/get-a-house-insurance-quote.html">House insurance Quote</a></li>
-                                    <li><a href="/get-a-travel-insurance-quote.html">Travel insurance Quote</a></li>
+                                    <li><a href="/get-a-travel-insurance-quote.html">Healthcare Insurance Quote</a></li>
 
                                 </ul>
 
@@ -756,15 +756,16 @@
                                 <a href="/travel-insurance.html"><i class="fa fa-caret-left"></i> Insurances promo</a>
                                 <ul class="submenu animated speed fadeInRight">
 
-                                    <li><a href="/life-insurance.html">Life insurance</a></li>
+                                    <li><a href="/life-insurance.html">Funeral Insurance</a></li>
                                     <li><a href="/car-insurance.html">Car insurance</a></li>
                                     <li><a href="/house-insurance.html">House insurance</a></li>
-                                    <li><a href="/travel-insurance.html">Travel insurance</a></li>
+                                    <li><a href="/travel-insurance.html">Healthcare Insurance</a></li>
 
                                 </ul>
 
                             </li>
-                            <!-- <li><a href="/404.html">404 page</a></li> -->
+
+                            <li><a href="/404.html">404 page</a></li>
                         </ul>
 
                     </li>
@@ -798,8 +799,8 @@
 
                 <div class="flying-2">
 
-                    <h3>Life insurances<br /> for your family</h3>
-                    <p>Curabitur iaculis ante a nibh vulputate sollicitudin.</p>
+                    <h3>Funeral Insurances<br /> for your family</h3>
+                    <!-- <p>Curabitur iaculis ante a nibh vulputate sollicitudin.</p> -->
 
                     <button class="button button-white" data-action="show-quote-popup" data-quote-key="life-insurance">Get a quote <i class="fa fa-paper-plane-o"></i></button>
 
@@ -807,8 +808,8 @@
 
                 <div class="heading-content">
 
-                    <h2>Insurances do matter</h2>
-                    <h3>Lorem ipsum dolor sit<br /> amet, consectetur.</h3>
+                    <h2>Nothing is as important as your family</h2>
+                    <h3>Feel protected against risks and unforeseen circumstances<br /> with <b>Helvetia Family Assistance Plan</b></h3>
 
                     <button class="button button-navy-blue" data-action="show-quote-popup" data-quote-key="life-insurance">Get a quote <i class="fa fa-paper-plane-o"></i></button>
 
@@ -826,8 +827,7 @@
 
                 <div class="flying-2">
 
-                    <h3>Life insurances<br /> for your family</h3>
-                    <p>Curabitur iaculis ante a nibh vulputate sollicitudin.</p>
+                    <h3>Funeral Insurances<br /> for your family</h3>
 
                     <button class="button button-white" data-action="show-quote-popup" data-quote-key="life-insurance">Get a quote <i class="fa fa-paper-plane-o"></i></button>
 
@@ -835,8 +835,8 @@
 
                 <div class="heading-content">
 
-                    <h2>Insurances do matter</h2>
-                    <h3>Lorem ipsum dolor sit<br /> amet, consectetur.</h3>
+                    <h2>Because your health and that of your loved ones is the most important thing</h2>
+                    <h3>Helvetia Insurance has designed a product that offers you top<br /> quality medical assistance at competitive prices</h3>
 
                     <button class="button button-navy-blue" data-action="show-quote-popup" data-quote-key="life-insurance">Get a quote <i class="fa fa-paper-plane-o"></i></button>
 
@@ -855,7 +855,7 @@
             <div class="left">
 
                 <h2>Take care of your family</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris hendrerit fringilla ligula, nec congue leo pharetra in. Quisque commodo vehicula justo, tincidunt vehicula elit consequat vel.</p>
+                <p>Because your health and that of your loved ones is the most important thing, Helvetia Insurance has designed a product that offers you top quality medical assistance at competitive prices.</p>
 
                 <div class="form">
 
@@ -893,11 +893,11 @@
                     <div class="circle-4 circle-pulse">
                     </div>
 
-                    <a href="tel:+123456789000">
+                    <a href="tel:+34966172576">
 
                         <div class="circle-center">
 
-                            <div class="circle-center-tip">Call us: <strong>(+123) 456 789 000</strong></div>
+                            <div class="circle-center-tip">Call us: <strong>(+34) 966 172 576</strong></div>
                             <i class="fa fa-phone"></i>
 
                         </div>
@@ -947,7 +947,7 @@
                         <h3>Get an insurance quote!</h3>
                         <h2>House insurance</h2>
 
-                        <p>Suspendisse potenti. Nullam pharetra sed felis non sodales. Nam eleifend, arcu sed imperdiet euismod, augue eros consequat tortor, ut convallis eros. Aenean a ipsum vel eros elementum efficitur.</p>
+                        <p>With our Helvetia Household insurance you will feel protected by ample coverage and assistance from a team of highly qualified and specialised professionals, as well as a 24 hour telephone assistance service.</p>
                         <button class="button button-navy-blue" data-action="show-quote-popup" data-quote-key="house-insurance">Get a quote <i class="fa fa-paper-plane-o"></i></button>
 
                     </div>
@@ -955,9 +955,9 @@
                     <div class="description" data-insurance-key="travel">
 
                         <h3>Get an insurance quote!</h3>
-                        <h2>Travel insurance</h2>
+                        <h2>Healthcare Insurance</h2>
 
-                        <p>Etiam id ante est. Aenean pellentesque quam vel purus tincidunt tristique. Integer arcu nibh, tempus id ultricies ut, vulputate nec nunc. Etiam elit elit, commodo at interdum sed.</p>
+                        <p>Because your health and that of your loved ones is the most important thing, Helvetia Insurance has designed a product that offers you top quality medical assistance at competitive prices.</p>
                         <button class="button button-navy-blue" data-action="show-quote-popup" data-quote-key="travel-insurance">Get a quote <i class="fa fa-paper-plane-o"></i></button>
 
                     </div>
@@ -965,9 +965,9 @@
                     <div class="description" data-insurance-key="life">
 
                         <h3>Get an insurance quote!</h3>
-                        <h2>Life insurance</h2>
+                        <h2>Funeral Insurance</h2>
 
-                        <p>Quisque pharetra lorem quis libero ornare fringilla. Maecenas nisl justo, suscipit vel tortor at, varius auctor erat. Maecenas efficitur felis nec arcu volutpat lacinia.</p>
+                        <p>Feel protected against risks and unforeseen circumstances with Helvetia Family Assistance Plan, an innovative policy devised to guarantee the maximum protection for your family, at any time and place, thanks to a wide range of cover for cases of death, accident, illness, travel and legal assistance.</p>
                         <button class="button button-navy-blue" data-action="show-quote-popup" data-quote-key="life-insurance">Get a quote <i class="fa fa-paper-plane-o"></i></button>
 
                     </div>
@@ -977,7 +977,7 @@
                         <h3>Get an insurance quote!</h3>
                         <h2>Car insurance</h2>
 
-                        <p>Proin et posuere dolor, a finibus tellus. Phasellus suscipit gravida magna. Nam posuere nisi eu ex sodales, sit amet dictum turpis maximus. Maecenas sodales vehicula tellus, at imperdiet risus.</p>
+                        <p>Because our commitment is to your safety, we have designed a policy aimed at protecting you from the many eventualities that can occur at the wheel of your car, not only those that can happen to you, but also ones that you may cause.</p>
                         <button class="button button-navy-blue" data-action="show-quote-popup" data-quote-key="car-insurance">Get a quote <i class="fa fa-paper-plane-o"></i></button>
 
                     </div>
@@ -996,14 +996,14 @@
                     <li data-insurance-key="travel">
 
                         <i class="fa fa-bus"></i>
-                        <span>Travel insurance</span>
+                        <span>Healthcare Insurance</span>
 
                     </li>
 
                     <li data-insurance-key="life">
 
                         <i class="fa fa-umbrella"></i>
-                        <span>Life insurance</span>
+                        <span>Funeral Insurance</span>
 
                     </li>
 
@@ -1185,23 +1185,23 @@
                 <div class="contact-detail-single">
 
                     <h3><i class="fa fa-map-marker"></i> Company informations</h3>
-                    <p><strong>Insurance Agency</strong><br /> John Doe</p>
-                    <p class="without-margin-bottom">5002 Example Street<br /> Los Angeles, CA 90034</p>
+                    <p><strong>yourfuneralsolution</strong><br /> Johnathan Rios</p>
+                    <p class="without-margin-bottom">Spain<br /> Calpe, Alicante 03710</p>
 
                 </div>
 
                 <div class="contact-detail-single">
 
                     <h3><i class="fa fa-envelope-o"></i> Contact details</h3>
-                    <p>E-mail address: <br /><a href="#">contact@insuranceagency.com</a></p>
+                    <!-- <p>E-mail address: <br /><a href="#">contact@insuranceagency.com</a></p> -->
                     <p class="without-margin-bottom"><button class="button button-navy-blue" data-action="show-contact-popup">Contact us! <i class="fa fa-paper-plane-o"></i></button></p>
 
                 </div>
 
                 <div class="contact-detail-single contact-detail-single-last">
 
-                    <h2>(+123) 456 789 000</h2>
-                    <p class="without-margin-bottom">Available 8:00am - 4:00pm</p>
+                    <h2>(+34) 966 172 576</h2>
+                    <p class="without-margin-bottom">Available 24/7</p>
 
                 </div>
 
@@ -1227,10 +1227,10 @@
                         <h4>Insurances</h4>
                         <ul class="sub">
 
-                            <li><a href="/life-insurance.html">Life insurance</a></li>
+                            <li><a href="/life-insurance.html">Funeral Insurance</a></li>
                             <li><a href="/car-insurance.html">Car insurance</a></li>
                             <li><a href="/house-insurance.html">House insurance</a></li>
-                            <li><a href="/travel-insurance.html">Travel insurance</a></li>
+                            <li><a href="/travel-insurance.html">Healthcare Insurance</a></li>
 
                         </ul>
 
@@ -1270,7 +1270,7 @@
 
             <ul class="right">
 
-                <li>Copyright &copy; 2015 <span class="divider">&middot;</span> <a href="/index.html">Insurance Agency</a></li>
+                <li>Copyright &copy; 2015 <span class="divider">&middot;</span> <a href="/index.html">yourfuneralsolution</a></li>
                 <li><div class="fb-like" data-href="https://www.facebook.com/envato" data-layout="button_count" data-action="like" data-show-faces="false" data-share="true"></div></li>
 
             </ul>
