Minor final changes

--- a/insurance/_assets/_views/car-insurance.html
+++ b/insurance/_assets/_views/car-insurance.html
@@ -110,7 +110,7 @@
                             <tr>
 
                                 <td>Grace Period:</td>
-                                <td>up to 30 days</td>
+                                <td>None</td>
 
                             </tr>
 
