--- a/insurance/_assets/_views/funeral-insurance.html
+++ b/insurance/_assets/_views/funeral-insurance.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <head>
 
-    <title>Funeral Insurance</title>
+    <title>Funeral & Life Insurance</title>
 
     {{> styles}}
 
@@ -20,7 +20,7 @@
             <div class="content">
 
                 <h3>Get an insurance quote!</h3>
-                <h2>Funeral Insurance</h2>
+                <h2>Funeral & Life Insurance</h2>
                 <p>
                 Nothing is as important as your family.
                 Feel protected against risks and
@@ -61,7 +61,7 @@
                 <li>
 
                     <i class="fa fa-umbrella"></i>
-                    <span>Funeral Insurance</span>
+                    <span>Funeral & Life Insurance</span>
 
                 </li>
 
@@ -73,7 +73,7 @@
 
                     <i class="fa fa-umbrella background-icon"></i>
 
-                    <h2>Funeral Insurance</h2>
+                    <h2>Funeral & Life Insurance</h2>
                     <p>
                     With just one call we will take care of all the necessary
                     arrangements rapidly and efficiently.
@@ -102,7 +102,7 @@
                             <tr>
 
                                 <td>Grace Period:</td>
-                                <td>up to 60 days</td>
+                                <td>up to 21 days</td>
 
                             </tr>
 
