--- a/insurance/_assets/_views/get-a-funeral-insurance-quote.html
+++ b/insurance/_assets/_views/get-a-funeral-insurance-quote.html
@@ -23,7 +23,7 @@
                 <h2>Funeral Insurance <span>Quote</span></h2>
                 <div class="form">
 
-                    <h4>Level of protection: <span class="slider-value quote-form-element" data-name="Level of protection" data-slider-id="life-protection-level">$<span></span></span></h4>
+                    <h4>Level of protection: <span class="slider-value quote-form-element" data-name="Level of protection" data-slider-id="life-protection-level"><span></span>€</span></h4>
                     <div class="slider" data-slider-min="10000" data-slider-max="1000000" data-slider-start="200000" data-slider-step="10000" data-slider-id="life-protection-level"></div>
 
                     <h4>Contact details:</h4>
