--- a/insurance/_assets/_views/healthcare-insurance.html
+++ b/insurance/_assets/_views/healthcare-insurance.html
@@ -95,7 +95,7 @@
                             <tr>
 
                               <td>Grace Period:</td>
-                              <td>up to 60 days</td>
+                              <td>up to 6 months!</td>
 
                           </tr>
 
