--- a/insurance/_assets/_views/house-insurance.html
+++ b/insurance/_assets/_views/house-insurance.html
@@ -116,7 +116,7 @@
                             <tr>
 
                                 <td>Grace Period:</td>
-                                <td>up to 30 days</td>
+                                <td>None</td>
 
                             </tr>
 
